login page setup
added login javascript file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>MathChat</title>
+        <title>Mathworks</title>
         <link rel=stylesheet href="theme.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
     <body>
+        <div id="header">
+            <h1>Mathworks</h1>
+        </div>
+        <form action="storUser.php">
+            <input type="text" value="Enter Your Nickname">
+        <form>
     </body>
 </html>
