--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
         <link rel=stylesheet href="theme.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="loginPage.js"></script>
-        <script>
-            var login=new Login();
-        </script>
     </head>
     <body>
         <div id="header">
             <h1>Mathworks</h1>
         </div>
-        <form action="storeUser.php">
-            <input type="text" value="Enter Your Nickname">
-            <input type="submit" value="Go!" id="submit">
+        <form>
+            <input type="text" value="Enter Your Nickname" id="nameBox">
+            <input type="button" value="Go!" id="submit">
         <form>
     </body>
 </html>
