--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+!DOCTYPE HTML>
 <html>
     <head>
         <title>Mathworks</title>
@@ -12,7 +12,25 @@
         </div>
         <form>
             <input type="text" value="Enter Your Nickname" id="nameBox">
-            <input type="button" value="Go!" id="submit">
+            <input type="button" value="Go!" id="submit" onClick="putCookie">
         <form>
     </body>
+            
+            <script>
+var today = new Date();
+  var expiry = new Date(today.getTime() + 30 * 24 * 3600 * 1000); // plus 30 days
+
+  function setCookie(name, value)
+  {
+    document.cookie=name + "=" + escape(value) + "; path=/; expires=" + expiry.toGMTString();
+  }
+function storeValues(form)
+                //this should set the UserName cookie to the proper value;
+  {
+    setCookie("userName", form.submit.value);
+    
+    return true;
+  }
+
+            </script>
 </html>
