set up lobby logic
not working yet, but set up

--- a/usernamecookie.html
+++ b/usernamecookie.html
@@ -23,7 +23,7 @@ function getCookie(cname) {
 }
 
 function checkCookie() {
-    var userName =geNametCookie("username");
+    var userName =geNamedCookie("username");
     if (userName != "") {
         alert("Welcome again " + userName);
     } else {
