--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <form>
             <input type="text" value="Enter Your Nickname" id="nameBox">
-            <input type="button" value="Go!" id="submit" onClick="putCookie">
+            <input type="button" value="Go!" id="submit" onClick="setCookie">
         <form>
     </body>
             
