--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var today = new Date();
 
   function setCookie(name, value)
   {
-    document.cookie=name + "=" + escape(value) + "; path=/; expires=" + expiry.toGMTString();
+    document.cookie=name + "=" + value + "; path=/; expires=" + expiry.toGMTString();
   }
 function storeValues(form)
                 //this should set the UserName cookie to the proper value;
