--- a/Lobby.html
+++ b/Lobby.html
@@ -13,7 +13,7 @@
                     var invite = snapshot.val();
                     if(invite.name==="open"|invite.name===getCookie("userName"))
                     {
-                        document.getElementById("invites").innerHTML += "<p class='message'>" + invite.text +"</p>"<br>;            
+                        document.getElementById("invites").innerHTML += "<p class='message'>" + invite.text +"</p><br>";            
                     }
             });
             
