--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
         <div id="header">
             <h1>Mathworks</h1>
         </div>
-        <form>
+		<form onsubmit="storeValues(this)">
+<input type="text" value="Enter Your Nickname" id="nameBox">
+<input type="submit" value="Go!" id="submit">
+<form>
+		
+		
+		
+        <!--<form>
             <input type="text" value="Enter Your Nickname" id="nameBox">
             <input type="button" value="Go!" id="submit" onClick="setCookie">
-        <form>
+        <form>-->
 		 <script>
 var today = new Date();
   var expiry = new Date(today.getTime() + 30 * 24 * 3600 * 1000); // plus 30 days
@@ -24,11 +31,15 @@ var today = new Date();
   }
 function storeValues(form)
                 //this should set the UserName cookie to the proper value;
-  {
+  /*{
     setCookie("userName", form.submit.value);
     
     return true;
-  }
+  }*/
+  {
+   setCookie("userName", form.nameBox.value);
+   return true;
+}
 
             </script>
 		
