--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
         <div id="header">
             <h1>Mathworks</h1>
         </div>
-		<form onsubmit="storeValues(this)">
+		<form>
+ <input type="text" value="Enter Your Nickname" id="nameBox" name='usrname'>
+ <input type="button" value="Go!" id="submit" onclick="putCookie(document.getElementsByTagName('form'));">
+</form>
+		
+		
+		
+		
+		
+		
+		<!--<form onsubmit="storeValues(this)">
 <input type="text" value="Enter Your Nickname" id="nameBox">
 <input type="submit" value="Go!" id="submit">
-<form>
+<form>-->
 		
 		
 		
@@ -22,24 +32,23 @@
             <input type="button" value="Go!" id="submit" onClick="setCookie">
         <form>-->
 		 <script>
-var today = new Date();
+	var today = new Date();
   var expiry = new Date(today.getTime() + 30 * 24 * 3600 * 1000); // plus 30 days
 
   function setCookie(name, value)
   {
-    document.cookie=name + "=" + value + "; path=/; expires=" + expiry.toGMTString();
+    document.cookie=name + "=" + escape(value) + "; path=/; expires=" + expiry.toGMTString();
   }
-function storeValues(form)
+function putCookie(form)
                 //this should set the UserName cookie to the proper value;
-  /*{
-    setCookie("userName", form.submit.value);
-    
-    return true;
-  }*/
   {
-   setCookie("userName", form.nameBox.value);
-   return true;
-}
+   setCookie("userName", form[0].usrname.value);
+
+    return true;
+  }	 
+		 
+		 
+
 
             </script>
 		
