Finished create a room function
Lobby Firebase integration done

--- a/Lobby.html
+++ b/Lobby.html
@@ -45,7 +45,7 @@
                         name=document.getElementById("tutorName").value;      
                     }
                     var text = document.getElementById("roomName").value; 
-                    .push({name: name, text: text}); 
+                    inviteBase.push({name: name, text: text}); 
                 });
             });
         </script>
