--- a/WebName UI/index.html
+++ b/WebName UI/index.html
@@ -14,12 +14,12 @@
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
     <link href='http://fonts.googleapis.com/css?family=Roboto&subset=greek-ext,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="chatPage.js"></script>
+    <link rel="stylesheet" href="WebName%20UI.css">
+    <script type="text/javascript" src="WebName%20UI.js"></script>
 
     <div id="title">
         <ul>
-           <li>Mathworks</li>
+            <li>Mathworks</li>
         </ul>
     </div>
     <title>
@@ -28,11 +28,20 @@
 </head>
 
 <body>
-    <br><br><br><br><br><br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div id="textbox">
         <div id="inputArea">
             <input type="text" id="inputBox" value="Enter Webname" onclick="clearTextbox()" onkeydown="if (event.keyCode == 13)send()" />
-            <br><br><br><br>
+            <br>
+            <br>
+            <br>
+            <br>
             <input type="button" id="inputButton" value="Go!" onclick="send()" />
         </div>
     </div>
