--- a/index.html
+++ b/index.html
@@ -10,47 +10,32 @@
         <div id="header">
             <h1>Mathworks</h1>
         </div>
-		<form>
- <input type="text" value="Enter Your Nickname" id="nameBox" name='usrname'>
- <input type="button" value="Go!" id="submit" onclick="putCookie(document.getElementsByTagName('form'));">
-</form>
-	</body>	
-		
-		
-		
-		
-		
-		<!--<form onsubmit="storeValues(this)">
+		<form onsubmit="storeValues(this)">
 <input type="text" value="Enter Your Nickname" id="nameBox">
 <input type="submit" value="Go!" id="submit">
-<form>-->
-		
-		
-		
-        <!--<form>
-            <input type="text" value="Enter Your Nickname" id="nameBox">
-            <input type="button" value="Go!" id="submit" onClick="setCookie">
-        <form>-->
-		 <script>
-	var today = new Date();
-  var expiry = new Date(today.getTime() + 30 * 24 * 3600 * 1000); // plus 30 days
+<form>
 
-  function setCookie(name, value)
-  {
-    document.cookie=name + "=" + escape(value) + "; path=/; expires=" + expiry.toGMTString();
-  }
-function putCookie(form)
-                //this should set the UserName cookie to the proper value;
-  {
-   setCookie("userName", form[0].usrname.value);
+    </body>
 
-    return true;
-  }
-		 
+            <script>
+			
+var today = new Date();
+    var expiry = new Date(today.getTime() + 30 * 24 * 3600 * 1000); // plus 30 days
+
+    function setCookie(name, value){
+        document.cookie=name + "=" + escape(value) + "; path=/; expires=" + expiry.toGMTString();
+    }
+    //this should set the UserName cookie to the proper value;
+    function storeValues(form)
+       {
+   setCookie("userName", form.nameBox.value);
+   return true;
+}*/
+    
 
 
             </script>
-		
+
 		
 		
 		
