Basic assigning problem to room
rooms don't display problems, but you can assign them. the problem
assigning page also has a preview function that needs to be formatted

--- a/Lobby.html
+++ b/Lobby.html
@@ -84,7 +84,7 @@
         {
             setCookie("chatroomName", document.getElementById("roomName").value);
             console.log(document.cookie+"word");
-            window.open("ChatPage.html");       
+            window.open("makeRoom.html");       
             return true;
         }
         
